@@ -6,7 +6,7 @@ mkdir -p gui/deploy
 set -e
 
 # Edit version
-version=0.4.9.8
+version=0.5.0.0
 
 jarFile="/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-$version.jar"
 
@@ -15,7 +15,7 @@ $JAVA_HOME/bin/javapackager \
     -deploy \
     -Bruntime="$JAVA_HOME/jre" \
     -BappVersion=$version \
-    -Bcategory=Internet \
+    -Bcategory=Network \
     -Bemail=team@bitsquare.io \
     -BlicenseType=GPLv3 \
     -BlicenseFile=LICENSE \
@@ -26,12 +26,18 @@ $JAVA_HOME/bin/javapackager \
     -vendor Bitsquare \
     -outdir gui/deploy \
     -srcfiles $jarFile:$jdkfixFile \
+    -srcfiles "core/src/main/resources/bitsquare.policy" \
     -srcfiles package/linux/LICENSE \
     -appclass io.bitsquare.app.BitsquareAppMain \
-    -outfile Bitsquare
+    -outfile Bitsquare \
+    -BjvmOptions=-Djava.security.manager \
+    -BjvmOptions=-Djava.security.debug=failure \
+    -BjvmOptions=-Djava.security.policy=file:bitsquare.policy \
+
 
 # sudo alien -r -c -k gui/deploy/bundles/bitsquare-$version.deb
 
+cp "gui/deploy/bundles/bitsquare-$version.deb" "﻿/home/bitsquare/Desktop/Bitsquare-32bit-$version.deb"
 mv "gui/deploy/bundles/bitsquare-$version.deb" "/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-32bit-$version.deb"
 # mv "bitsquare-$version-1.i386.rpm" "/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-32bit-$version.rpm"
 rm -r gui/deploy/
