@@ -5,14 +5,13 @@
 :: 32 bit build
 :: Needs Inno Setup 5 or later (http://www.jrsoftware.org/isdl.php)
 
-SET version=0.4.9.8
+SET version=0.5.0.0
 
 :: Private setup
 SET outdir=\\VBOXSVR\vm_shared_windows_32bit
 :: Others might use the following
 :: SET outdir=.
 
-copy gui\target\shaded.jar Bitsquare-%version%.jar
 call "%JAVA_HOME%\bin\javapackager.exe" -deploy ^
 -BappVersion="%version%" ^
 -native exe ^
@@ -21,7 +20,12 @@ call "%JAVA_HOME%\bin\javapackager.exe" -deploy ^
 -vendor Bitsquare ^
 -outdir %outdir% ^
 -appclass io.bitsquare.app.BitsquareAppMain ^
--srcfiles %outdir%\Bitsquare-%version%.jar ^
+-srcfiles %outdir%\Bitsquare.jar ^
+-srcfiles "core/src/main/resources/bitsquare.policy" ^
 -outfile Bitsquare ^
 -Bruntime="%JAVA_HOME%\jre" ^
--BjvmProperties=-Djava.net.preferIPv4Stack=true
+-BjvmOptions=-Djava.security.manager ^
+-BjvmOptions=-Djava.security.debug=failure ^
+-BjvmOptions=-Djava.security.policy=file:bitsquare.policy ^
+-Bicon=package\windows\Bitsquare.ico
+
